# plataforma-inteligencia-financeira

./: .gitignore  Dockerfile  README.md  notebook.ipynb  pyproject.toml
app/: __init__.py  life_span.py
app/api/v1/: artifacts.py  filters.py  insights.py  itens.py  metrics.py  rag.py  upload.py
app/core/: cache.py
app/core/chromadb/: db.py
app/core/config/: __init__.py  settings.py  validators.py
app/core/llm/: __init__.py  client.py
app/domain/: __init__.py  data_artifact.py  feature_registry.py  schema.py
app/service/filter/: __init__.py  filter.py  test_filter.py
app/service/filter/util/: __init__.py  constants.py  models.py  serializers.py
app/service/ingestion/: __init__.py  ingestion.py
app/service/insights/: __init__.py  deterministic_layer.py  insights.py  models.py  prompts.py
app/service/metrics/: __init__.py  base.py  evolucao_temporal.py  metrics.py
app/service/metrics/inadimplencia/: __init__.py  inadimplencia_metric.py
app/service/metrics/receita/: __init__.py  receita_metric.py
app/service/metrics/taxa/: __init__.py  taxa_metric.py
app/service/metrics/ticket_medio/: __init__.py  ticket_medio_metric.py
app/service/process/: __init__.py
app/service/rag/: __init__.py  embedding.py  indexer.py  query.py
scratch/: explore_openrouter.py  test_chroma_integration.py  test_concurrency.py  test_direct_openrouter.py  test_embedding_flow.py  test_insight_validation.py  test_llm_fallback.py  test_multi_fallback.py  test_response_enrichment.py
scripts/: ollama.sh  start_chroma.sh
teste/: dados.xlsx  notebook.ipynb
(+34 files in other folders)
