[project]
name = "teste1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "fastparquet>=2026.3.0",
    "llama-index>=0.14.20",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-llms-ollama>=0.10.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.26",
    "uvicorn>=0.44.0",
]
